welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:8: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (e2=e1) {
               ^close10:8: error: type mismatch;
 found   : Unit
 required: Int
  } else if (e2=e1) {
         ^